--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My App{% endblock %}</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    {% block head %}
-    <link rel="stylesheet" href="{{ url_for('crud.static', filename='style.css') }}"/>
-    {% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -16,10 +13,14 @@
             <ul class="navbar-nav">
                 {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <span class="nav-link">{{ current_user.username }}</span>
+                    <a class="nav-link" href="{{ url_for('personal.index') }}">Hello, {{ current_user.username }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-outline-secondary" href="{{ url_for('auth.logout') }}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                 </li>
                 {% endif %}
             </ul>
@@ -31,7 +32,9 @@
           {% if messages %}
             <div class="flashes">
               {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% if request.endpoint != 'auth.login' %}
+                  <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endif %}
               {% endfor %}
             </div>
           {% endif %}
