--- a/apps/main/templates/main/product_detail.html
+++ b/apps/main/templates/main/product_detail.html
@@ -26,7 +26,7 @@
         <td>{{ product.DELTA_TIME }}</td>
     </tr>
 </table>
-<form method="POST" action="{{ url_for('main.add_to_wishlist', product_id=product.ID) }}">
+<form method="POST" action="{{ url_for('main.add_to_wishlist', product_id=product.PID) }}">
     {{ form.hidden_tag() }}
     <button type="submit" class="btn btn-primary">Add to Wishlist</button>
 </form>
