--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Product List{% endblock %}
+
+{% block title %}Find Best Phone{% endblock %}
 
 {% block content %}
-<h1>Top 5 Product List</h1>
+<h1>Find Best Phone</h1>
 
 <!-- iPhone Model and Capacity Selection Form -->
 <form id="modelCapacityForm" method="POST" action="{{ url_for('main.index') }}">
@@ -33,22 +34,27 @@
     {{ ipdf_html }}
 </div>
 {% else %}
+<style>
+        th {
+            text-align: center;
+        }
+    </style>
 <h2 id="productListTitle">Top 5 Product List</h2>
 <table class="table table-striped" id="productTable">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Product Image</th>
-            <th>Location</th>
-            <th>Delta Time</th>
+            <th>제목</th>
+            <th>가격</th>
+            <th>외관</th>
+            <th>판매 위치</th>
+            <th>시간</th>
         </tr>
     </thead>
     <tbody>
         {% for product in products %}
         <tr onclick="window.location='{{ url_for('main.product_detail', pid=product.PID) }}';" style="cursor:pointer;">
             <td>{{ product.NAME }}</td>
-            <td>{{ product.PRICE }}</td>
+            <td>{{ "{:,.0f}".format(product.PRICE) }}</td>
             <td><img src="{{ product.PRODUCT_IMAGE }}" alt="Product Image" width="100"></td>
             <td>{{ product.LOCATION }}</td>
             <td>{{ product.DELTA_TIME }}</td>
@@ -60,17 +66,6 @@
 
 <script>
     const iphoneModels = {
-        "아이폰X": ["64GB", "256GB"],
-        "아이폰XR": ["64GB", "128GB", "256GB"],
-        "아이폰XS": ["64GB", "256GB", "512GB"],
-        "아이폰XS 맥스": ["64GB", "256GB", "512GB"],
-        "아이폰 11": ["64GB", "128GB", "256GB"],
-        "아이폰 11 프로": ["64GB", "256GB", "512GB"],
-        "아이폰 11 프로 맥스": ["64GB", "256GB", "512GB"],
-        "아이폰 12 미니": ["64GB", "128GB", "256GB"],
-        "아이폰 12": ["64GB", "128GB", "256GB"],
-        "아이폰 12 프로": ["128GB", "256GB", "512GB"],
-        "아이폰 12 프로 맥스": ["128GB", "256GB", "512GB"],
         "아이폰 13 미니": ["128GB", "256GB", "512GB"],
         "아이폰 13": ["128GB", "256GB", "512GB"],
         "아이폰 13 프로": ["128GB", "512GB", "1TB"],
