--- a/apps/main/templates/main/product_detail.html
+++ b/apps/main/templates/main/product_detail.html
@@ -5,32 +5,34 @@
 {% block content %}
 <div class="card">
     <div class="card-header">
-        <h1>Product Detail</h1>
+        <h2>상품정보</h2>
     </div>
     <div class="card-body">
         <div class="row">
             <div class="col-md-6">
                 <table class="table table-striped">
                     <tr>
-                        <th>Name</th>
+                        <th>제목</th>
                         <td>{{ product.NAME }}</td>
                     </tr>
                     <tr>
-                        <th>Price</th>
-                        <td>{{ product.PRICE }}</td>
+                        <th>가격</th>
+                        <td>{{ "{:,.0f}".format(product.PRICE) }}</td>
+
+                        {#<td>{{ product.PRICE | format(",") }}</td>#}
                     </tr>
                     <tr>
-                        <th>Location</th>
+                        <th>위치</th>
                         <td>{{ product.LOCATION }}</td>
                     </tr>
                     <tr>
-                        <th>Delta Time</th>
+                        <th>시간</th>
                         <td>{{ product.DELTA_TIME }}</td>
                     </tr>
                 </table>
             </div>
             <div class="col-md-6 text-center">
-                <img src="{{ product.PRODUCT_IMAGE }}" alt="Product Image" class="img-fluid rounded">
+                <img src="{{ product.PRODUCT_IMAGE }}" alt="Product Image" class="img-fluid rounded" width="500">
             </div>
         </div>
         <div class="mt-4 text-center">
@@ -38,7 +40,7 @@
                 {{ form.hidden_tag() }}
                 <button type="submit" class="btn btn-primary">Add to Wishlist</button>
             </form>
-            <a href="https://bunjang.co.kr/product/{{ product.PID }}" class="btn btn-secondary ml-2">Show Selling Spot</a>
+            <a target="_blank" href="https://bunjang.co.kr/product/{{ product.PID }}" class="btn btn-secondary ml-2">Show Selling Spot</a>
             <a href="{{ url_for('main.index') }}" class="btn btn-secondary ml-2">Back to Product List</a>
         </div>
     </div>
