--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -21,11 +21,11 @@
             <option value="">모델을 먼저 선택하세요</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">입력한 값 찾기</button>
+    <button type="submit" class="btn btn-primary">모델 찾기</button>
 </form>
 
 <!-- Display Selected Values -->
-<div id="selectedValues" class="mt-3"></div>
+<div id="selectedValues" class="mt-5"></div>
 
 {% if ipdf_html %}
 <h2>검색 결과</h2>
@@ -46,8 +46,6 @@
             <th>제목</th>
             <th>가격</th>
             <th>외관</th>
-            <th>판매 위치</th>
-            <th>시간</th>
         </tr>
     </thead>
     <tbody>
@@ -56,8 +54,7 @@
             <td>{{ product.NAME }}</td>
             <td>{{ "{:,.0f}".format(product.PRICE) }}</td>
             <td><img src="{{ product.PRODUCT_IMAGE }}" alt="Product Image" width="100"></td>
-            <td>{{ product.LOCATION }}</td>
-            <td>{{ product.DELTA_TIME }}</td>
+            
         </tr>
         {% endfor %}
     </tbody>
