디비저장 취소

--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -74,7 +74,7 @@
         "아이폰 15": ["128GB", "256GB", "512GB"],
         "아이폰 15 PLUS": ["128GB", "256GB", "512GB"],
         "아이폰 15 프로": ["128GB", "256GB", "512GB", "1TB"],
-        "아이폰 15 프로 맥스": ["256GB", "512GB", "1TB"]
+        "아이폰 15 프로 맥스": ["256GB", "512GB"]
     };
 
     function populateModels() {
