chore: Update user profile page with localized table headers

--- a/apps/personal/templates/personal/index.html
+++ b/apps/personal/templates/personal/index.html
@@ -3,6 +3,11 @@
 {% block title %}User Profile{% endblock %}
 
 {% block content %}
+<style>
+        th {
+            text-align: center;
+        }
+    </style>
 <h1>User Profile</h1>
 <table class="table table-striped">
     <tr>
@@ -14,16 +19,16 @@
         <td>{{ user.email }}</td>
     </tr>
 </table>
-<a href="{{ url_for('personal.edit_user') }}" class="btn btn-primary">Edit Profile</a>
+<a href="{{ url_for('personal.edit_user') }}" class="btn btn-primary">Edit Profile</a><br>
+<br>
 <h2>Wishlist</h2>
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Product Image</th>
-            <th>Location</th>
-            <th>Delta Time</th>
+            <th>제품명</th>
+            <th>가격</th>
+            <th>사진</th>
+            
         </tr>
     </thead>
     <tbody>
@@ -32,8 +37,7 @@
             <td>{{ item.product.NAME }}</td>
             <td>{{ item.product.PRICE }}</td>
             <td><img src="{{ item.product.PRODUCT_IMAGE }}" alt="Product Image" width="100"></td>
-            <td>{{ item.product.LOCATION }}</td>
-            <td>{{ item.product.DELTA_TIME }}</td>
+            
         </tr>
         {% endfor %}
     </tbody>
