chore: Update table styling in index.html

--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -38,6 +38,9 @@
         th {
             text-align: center;
         }
+         td {
+            text-align: center;
+        }
     </style>
 <h2 id="productListTitle">Top 5 Product List</h2>
 <table class="table table-striped" id="productTable">
